--- a/_posts/2023-09-22-temp.md
+++ b/_posts/2023-09-22-temp.md
@@ -7,3 +7,5 @@ tags: [Template,Temp,Tem,Te]
 ### temp
 
 this is a temp file.
+
+![[Pasted image 20230929193133.png](../Pasted%20image%2020230929193133.png)
