--- a/_posts/2023-09-22-temp.md
+++ b/_posts/2023-09-22-temp.md
@@ -10,5 +10,5 @@ this is a temp file.
 
 https://raw.githubusercontent.com/tacticalLou/tacticalLou.github.io/main
 
-![[Pasted image 20230929193133.png](https://raw.githubusercontent.com/tacticalLou/tacticalLou.github.io/main/Pasted%20image%2020230929193133.png)
+![Pasted image 20230929193133.png](https://raw.githubusercontent.com/tacticalLou/tacticalLou.github.io/main/Pasted%20image%2020230929193133.png)
 
