--- a/_posts/2023-09-22-temp.md
+++ b/_posts/2023-09-22-temp.md
@@ -12,15 +12,15 @@ https://raw.githubusercontent.com/tacticalLou/tacticalLou.github.io/main
 
 ![Pasted image 20230929193133.png](https://raw.githubusercontent.com/tacticalLou/tacticalLou.github.io/main/Pasted%20image%2020230929193133.png)
 
-![[Pasted image 20230929205433.png](../Pasted%20image%2020230929205433.png)
+![Pasted image 20230929205433.png](https://raw.githubusercontent.com/tacticalLou/tacticalLou.github.io/main/Pasted%20image%2020230929205433.png)
 
 
 
-![[Pasted image 20230929205446.png](../Pasted%20image%2020230929205446.png)
+![Pasted image 20230929205446.png](https://raw.githubusercontent.com/tacticalLou/tacticalLou.github.io/main/Pasted%20image%2020230929205446.png)
 
 
 
-![[Pasted image 20230929205501.png](../Pasted%20image%2020230929205501.png)
+![Pasted image 20230929205501.png](https://raw.githubusercontent.com/tacticalLou/tacticalLou.github.io/main/Pasted%20image%2020230929205501.png)
 
 
 
