--- a/_posts/2023-09-22-temp.md
+++ b/_posts/2023-09-22-temp.md
@@ -9,3 +9,11 @@ tags: [Template,Temp,Tem,Te]
 this is a temp file.
 
 https://raw.githubusercontent.com/tacticalLou/tacticalLou.github.io/main
+
+
+![[Pasted image 20230929211553.png](../Pasted%20image%2020230929211553.png)
+
+
+![[Pasted image 20230929211601.png](../Pasted%20image%2020230929211601.png)
+
+
